# Opencv_Server

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qfaceobject.cpp  qfaceobject.h  registerwin.cpp  registerwin.h
